# dinov3

./: MODEL_CARD_ja.md  pyproject.toml
dinov3/distributed/: torch_distributed_wrapper.py
dinov3/eval/: helpers.py  knn.py  linear.py  log_regression.py  setup.py  utils.py
dinov3/eval/depth/: train.py
dinov3/eval/depth/models/: __init__.py
dinov3/eval/detection/models/: transformer.py
dinov3/eval/segmentation/: eval.py  train.py
dinov3/eval/segmentation/models/: __init__.py
dinov3/eval/segmentation/models/heads/: pixel_decoder.py
dinov3/eval/segmentation/models/utils/: ms_deform_attn.py
dinov3/eval/text/: ac_comp_parallelize.py  build_dinotxt.py  train_dinotxt.py
dinov3/fsdp/: ac_compile_parallelize.py
dinov3/hub/: detectors.py
dinov3/logging/: helpers.py
dinov3/models/: __init__.py
dinov3/train/: multidist_meta_arch.py  ssl_meta_arch.py  train.py
dinov3/utils/: __init__.py  utils.py
tools/: run_all_cpu_models.py  run_cpu_inference.py  test_detector_forward.py
