[project]
name = "dinov3-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ftfy>=6.3.1",
    "omegaconf>=2.3.0",
    "regex>=2025.11.3",
    "scikit-learn>=1.8.0",
    "submitit>=1.5.3",
    "termcolor>=3.2.0",
    "torch>=2.9.1",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.1",
]
